# fiap-ml-finance

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.job  Makefile  README.md  deploy-dashboard.sh  pyproject.toml  requirements.txt
app/: lambda_api_handler.py  lambda_job_handler.py
app/fastapi_app/: deps.py  main.py  schemas.py
app/jobs/: ingest_1d.py  ingest_1h.py  ingest_5m.py  ingest_historical.py  ingest_hourly_historical.py  train_daily.py
app/ml/: features.py  model.py
dashboard/: app.js  config.example.js  index.html  styles.css
infra/terraform/: api.tf  cloudfront.tf  ecr.tf  iam.tf  jobs.tf  lifecycle.tf  main.tf  variables.tf
