[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiap-fase3-ml-finance"
version = "0.1.0"
description = "Serverless low-cost finance ML demo (FastAPI + yfinance + AWS)"
authors = [{name="Victor"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "mangum",
    "yfinance",
    "pandas",
    "numpy>=1.26.0,<2.0",
    "scikit-learn>=1.0.0,<1.6",
    "pyarrow>=12.0.0,<18.0",
    "boto3",
    "python-dateutil",
    "plotly",
    "python-dotenv"
]

[tool.setuptools.packages.find]
include = ["app*"]
